Adding Hash Generator  ⚙

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ant-design/icons": "4.2.1",
     "antd": "4.3.5",
     "antd-mask-input": "0.1.13",
+    "crypto-js": "^4.0.0",
     "rc-queue-anim": "1.8.5",
     "react": "^16.8.6",
     "react-chrome-extension-router": "^1.1.0",
