Adding RSS Feed 🔪

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HackTools",
+  "name": "HacTools",
   "version": "0.1.0a",
   "description": "The all in one Red team browser extension for web pentesters",
   "main": "index.js",
@@ -35,6 +35,7 @@
     "react-chrome-extension-router": "^1.1.0",
     "react-clipboard.js": "2.0.16",
     "react-dom": "^16.8.6",
+    "react-query": "^2.5.13",
     "react-scripts": "3.0.1"
   }
 }
