--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HacTools",
+  "name": "HackTools",
   "version": "0.1.0a",
   "description": "The all in one Red team browser extension for web pentesters",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Ludovic Coulon & Riadh Bouchahoua",
+  "author": "Ludovic COULON & Riadh BOUCHAHOUA",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -17,13 +17,13 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^4.3.0",
+    "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.44.2",
+    "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@ant-design/icons": "4.2.1",
