--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
-	"name": "Hack Tools",
+	"name": "Hack-Tools",
 	"version": "0.3.0",
 	"description": "The all in one Red team extension for web pentester",
 	"browser_action": {
-		"default_title": "Hack Tools",
+		"default_title": "Hack-Tools",
 		"default_popup": "index.html",
 		"default_icon": {
 			"16": "get_started16.png",
