--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.8.6",
     "react-query": "^2.5.13",
     "react-scripts": "3.0.1",
-    "sm3": "^1.0.3"
+    "sm3": "^1.0.3",
+    "use-persisted-state": "^0.3.3"
   }
 }
