--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@ant-design/icons": "4.6.2",
 		"antd": "4.15.1",
 		"antd-mask-input": "0.1.15",
+		"axios": "^0.21.1",
 		"crypto-js": "^4.0.0",
 		"pretty": "^2.0.0",
 		"rc-queue-anim": "1.8.5",
