--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Hack-Tools",
-	"version": "0.3.8",
+	"version": "0.4.0",
 	"description": "The all in one Red team extension for web pentester",
 	"browser_action": {
 		"default_title": "Hack-Tools",
@@ -18,6 +18,7 @@
 		"48": "get_started48.png",
 		"128": "get_started128.png"
 	},
+	"permissions": [ "<all_urls>" ],
 	"manifest_version": 2,
 	"devtools_page": "devtools.html"
 }
