--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-	"presets": ["@babel/preset-react"]
+	 "presets": [
+      "@babel/preset-env",
+      "@babel/preset-typescript"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
 }
