--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,14 @@
 {
-	 "presets": [
-      "@babel/preset-env",
-      "@babel/preset-typescript"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
-    ]
+  "presets": [
+      [
+          "@babel/preset-env",
+          {
+              "modules": false
+          }
+      ],
+      "@babel/preset-react"
+  ],
+  "plugins": [
+      "react-hot-loader/babel"
+  ]
 }
