--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
 		"@babel/core": "^7.15.0",
+		"@babel/helper-call-delegate": "^7.12.13",
 		"@babel/plugin-proposal-class-properties": "^7.14.5",
 		"@babel/preset-env": "^7.15.0",
-		"@babel/preset-react": "^7.0.0",
+		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.9.0",
 		"@types/antd": "^1.0.0",
 		"@types/crypto-js": "^4.0.2",
@@ -25,30 +26,24 @@
 		"@types/react-query": "^1.2.9",
 		"@types/react-syntax-highlighter": "^13.5.2",
 		"@types/use-persisted-state": "^0.3.0",
-		"babel-loader": "^8.0.6",
+		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^4.0.0-alpha.0",
 		"copy-webpack-plugin": "^9.0.1",
 		"css-loader": "^6.2.0",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.3.2",
+		"react-hot-loader": "^4.13.0",
 		"style-loader": "^3.2.1",
 		"typescript": "^4.3.5",
 		"webpack": "^5.50.0",
 		"webpack-cli": "^4.8.0",
 		"webpack-dev-server": "^4.0.0"
 	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not op_mini all"
+	],
 	"dependencies": {
 		"@ant-design/icons": "4.6.2",
 		"@hot-loader/react-dom": "^17.0.1",
