--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,27 @@
   "compilerOptions": {
     "jsx": "react",
     "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
     "outDir": "./dist/",
     "preserveConstEnums": true,
     "removeComments": true,
     "esModuleInterop": true,
+    "baseUrl": "src",
     "sourceMap": true,
-    "target": "es5",
+    "moduleResolution": "node",
+    "target": "es6",
+    "paths": {
+      "compforms": [
+        "compforms"
+      ],
+      "components": [
+        "components"
+      ],
+      "utils": [
+        "utils"
+      ]
+    }
   },
   "include": [
     "./src/**/**/*"
