--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "author": "Ludovic COULON & Riadh BOUCHAHOUA",
     "license": "MIT",
     "devDependencies": {
-        "@babel/cli": "^7.19.3",
-        "@babel/core": "^7.20.5",
+        "@babel/cli": "^7.21.0",
+        "@babel/core": "^7.21.0",
         "@babel/helper-call-delegate": "^7.12.13",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
-        "@babel/preset-typescript": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.0",
         "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
         "@types/crypto-js": "^4.1.1",
         "@types/pretty": "^2.0.1",
-        "@types/react-syntax-highlighter": "^15.5.5",
+        "@types/react-syntax-highlighter": "^15.5.6",
         "@types/use-persisted-state": "^0.3.1",
-        "babel-loader": "^9.1.0",
+        "babel-loader": "^9.1.2",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.3",
@@ -37,8 +37,8 @@
         "react-hot-loader": "^4.13.1",
         "react-refresh": "^0.14.0",
         "style-loader": "^3.3.1",
-        "typescript": "^4.9.4",
-        "webpack": "^5.75.0",
+        "typescript": "^4.9.5",
+        "webpack": "^5.76.1",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.11.1"
     },
@@ -49,25 +49,26 @@
     ],
     "dependencies": {
         "@ant-design/compatible": "^5.1.1",
-        "@ant-design/cssinjs": "^1.2.0",
+        "@ant-design/cssinjs": "^1.6.1",
         "@ant-design/icons": "4.8.0",
-        "@ant-design/pro-layout": "^7.4.0",
+        "@ant-design/pro-card": "^2.3.0",
+        "@ant-design/pro-layout": "^7.10.0",
         "@hot-loader/react-dom": "^17.0.2",
         "@types/chrome": "^0.0.206",
-        "@types/jest": "^29.2.4",
-        "@types/node": "^18.11.17",
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.9",
-        "@uiw/react-md-editor": "^3.20.2",
+        "@types/jest": "^29.4.0",
+        "@types/node": "^18.15.0",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@uiw/react-md-editor": "^3.20.5",
         "antd": "5.1.0",
         "antd-mask-input": "2.0.7",
-        "axios": "^1.2.1",
+        "axios": "^1.3.4",
         "crypto-js": "^4.1.1",
         "darkreader": "^4.9.58",
         "escape-quotes": "^1.0.2",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
-        "mermaid": "^9.3.0",
+        "mermaid": "^9.4.3",
         "pretty": "^2.0.0",
         "rc-queue-anim": "^2.0.0",
         "react": "^18.2.0",
@@ -76,8 +77,8 @@
         "react-color": "^2.19.3",
         "react-dom": "^18.2.0",
         "react-highlight-words": "^0.18.0",
-        "react-query": "^3.39.2",
-        "react-refresh-typescript": "^2.0.7",
+        "react-query": "^3.39.3",
+        "react-refresh-typescript": "^2.0.8",
         "react-syntax-highlighter": "^15.5.0",
         "sm3": "^1.0.3",
         "ts-loader": "^9.4.2",
