--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "start": "webpack --watch",
         "build": "webpack --mode production && rm -f ./dist/*.map",
         "watch": "webpack --watch",
-        "zip_chrome": "rm -f './dist/*.map' && zip -r bundle_chrome.zip dist/",
-        "zip_moz": " rm -f './dist/*.map' && sed -i 's/\"manifest_version\": 3/\"manifest_version\": 2/g' ./dist/manifest.json  && sed -i 's/\"action\":/\"browser_action\":/g' ./dist/manifest.json & zip -r bundle_moz.zip dist/*",
+        "zip_chrome": "rm -f './dist/*{.map,.txt}' && zip -r bundle_chrome.zip dist/",
+        "zip_moz": " rm -f './dist/*{.map,.txt}' && sed -i 's/\"manifest_version\": 3/\"manifest_version\": 2/g' ./dist/manifest.json  && sed -i 's/\"action\":/\"browser_action\":/g' ./dist/manifest.json && cd ./dist && zip -r ../bundle_moz.zip * && cd -",
         "zip_all": "yarn zip_chrome && yarn zip_moz",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
