--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "crypto-js": "^4.1.1",
         "darkreader": "^4.9.58",
         "escape-quotes": "^1.0.2",
+        "file-saver": "^2.0.5",
         "jose": "^4.14.4",
+        "json2csv": "^6.0.0-alpha.2",
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "less": "^4.1.3",
@@ -38,6 +40,7 @@
         "mermaid": "^9.4.3",
         "node-forge": "^1.3.1",
         "node-sql-parser": "^4.6.6",
+        "papaparse": "^5.4.1",
         "pretty": "^2.0.0",
         "rc-queue-anim": "^2.0.0",
         "react": "18.2.0",
@@ -47,6 +50,7 @@
         "react-dom": "18.2.0",
         "react-highlight-words": "^0.18.0",
         "react-icons": "^4.8.0",
+        "react-pdf": "^6.2.2",
         "react-query": "^3.39.3",
         "react-refresh-typescript": "^2.0.8",
         "react-syntax-highlighter": "^15.5.0",
