--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "not op_mini all"
     ],
     "dependencies": {
+        "@react-pdf/renderer": "^3.1.9",
         "antd": "5.1.0",
         "antd-mask-input": "2.0.7",
         "axios": "^1.3.4",
