--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ],
     "dependencies": {
         "@react-pdf/renderer": "^3.1.9",
+        "@tanstack/react-query": "4.28",
         "antd": "5.1.0",
         "antd-mask-input": "2.0.7",
         "axios": "^1.3.4",
@@ -53,7 +54,6 @@
         "react-highlight-words": "^0.18.0",
         "react-icons": "^4.8.0",
         "react-pdf": "^6.2.2",
-        "react-query": "^3.39.3",
         "react-refresh-typescript": "^2.0.8",
         "react-syntax-highlighter": "^15.5.0",
         "sm3": "^1.0.3",
