--- a/package.json
+++ b/package.json
@@ -24,21 +24,24 @@
     ],
     "dependencies": {
         "@react-pdf/renderer": "^3.1.9",
-        "@tanstack/react-query": "4.28",
+        "@tanstack/query-sync-storage-persister": "^4.29.7",
+        "@tanstack/react-query": "^4.29.7",
+        "@tanstack/react-query-persist-client": "^4.29.7",
         "antd": "5.1.0",
         "antd-mask-input": "2.0.7",
-        "axios": "^1.3.4",
+        "axios": "^1.4.0",
         "crypto-browserify": "^3.12.0",
         "crypto-js": "^4.1.1",
         "darkreader": "^4.9.58",
         "escape-quotes": "^1.0.2",
         "file-saver": "^2.0.5",
         "jose": "^4.14.4",
-        "json2csv": "^6.0.0-alpha.2",
+        "json2csv": "6.0.0-alpha.2",
         "jsonwebtoken": "^9.0.0",
         "jwt-decode": "^3.1.2",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
+        "lz-string": "^1.5.0",
         "mermaid": "^9.4.3",
         "node-forge": "^1.3.1",
         "node-sql-parser": "^4.6.6",
@@ -54,18 +57,19 @@
         "react-highlight-words": "^0.18.0",
         "react-icons": "^4.8.0",
         "react-pdf": "^6.2.2",
-        "react-refresh-typescript": "^2.0.8",
+        "react-refresh-typescript": "^2.0.9",
         "react-syntax-highlighter": "^15.5.0",
         "sm3": "^1.0.3",
         "ts-loader": "^9.4.2",
-        "use-persisted-state": "^0.3.3"
+        "use-persisted-state": "^0.3.3",
+        "zustand": "^4.3.8"
     },
     "devDependencies": {
         "@ant-design/compatible": "^5.1.1",
-        "@ant-design/cssinjs": "^1.6.1",
+        "@ant-design/cssinjs": "^1.9.1",
         "@ant-design/icons": "4.8.0",
-        "@ant-design/pro-card": "^2.3.0",
-        "@ant-design/pro-layout": "^7.10.0",
+        "@ant-design/pro-card": "^2.4.9",
+        "@ant-design/pro-layout": "^7.13.5",
         "@hot-loader/react-dom": "^17.0.2",
         "@originjs/vite-plugin-commonjs": "^1.0.3",
         "@rollup/plugin-typescript": "^8.5.0",
@@ -75,15 +79,15 @@
         "@types/node": "18.7.23",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
-        "@types/ws": "^8.5.3",
+        "@types/ws": "^8.5.4",
         "@typescript-eslint/eslint-plugin": "5.38.1",
         "@typescript-eslint/parser": "5.38.1",
-        "@uiw/react-md-editor": "^3.20.5",
-        "@vitejs/plugin-legacy": "^4.0.2",
+        "@uiw/react-md-editor": "^3.22.0",
+        "@vitejs/plugin-legacy": "^4.0.3",
         "@vitejs/plugin-react": "2.1.0",
         "chokidar": "^3.5.3",
         "eslint": "8.24.0",
-        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "4.2.1",
         "eslint-plugin-react": "7.31.8",
         "fs-extra": "10.1.0",
@@ -94,7 +98,7 @@
         "rollup": "2.79.1",
         "rollup-plugin-polyfill-node": "^0.12.0",
         "sass": "1.55.0",
-        "terser": "^5.16.8",
+        "terser": "^5.17.4",
         "ts-jest": "29.0.2",
         "ts-loader": "9.4.1",
         "typescript": "4.8.3",
