--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "react-color": "^2.19.3",
         "react-dom": "18.2.0",
         "react-highlight-words": "^0.18.0",
+        "react-hotkeys-hook": "^4.4.0",
         "react-icons": "^4.8.0",
         "react-pdf": "^6.2.2",
         "react-refresh-typescript": "^2.0.9",
