Adding CodeMirror for SQL syntax editor

--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
         "not op_mini all"
     ],
     "dependencies": {
+        "@codemirror/lang-sql": "^6.5.2",
+        "@codemirror/lint": "^6.3.0",
         "@react-pdf/renderer": "^3.1.9",
         "@tanstack/query-sync-storage-persister": "^4.29.7",
         "@tanstack/react-query": "^4.29.7",
         "@tanstack/react-query-persist-client": "^4.29.7",
+        "@uiw/codemirror-theme-dracula": "^4.21.7",
+        "@uiw/react-codemirror": "^4.21.7",
         "antd": "5.1.0",
         "antd-mask-input": "2.0.7",
         "axios": "^1.4.0",
         "crypto-browserify": "^3.12.0",
         "crypto-js": "^4.1.1",
         "darkreader": "^4.9.58",
+        "dracula.css": "link:codemirror/theme/dracula.css",
         "escape-quotes": "^1.0.2",
         "file-saver": "^2.0.5",
         "jose": "^4.14.4",
