--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
         "react-refresh-typescript": "^2.0.9",
         "react-syntax-highlighter": "^15.5.0",
         "sm3": "^1.0.3",
-        "ts-loader": "^9.4.2",
         "use-persisted-state": "^0.3.3",
         "yaml": "^2.3.1",
         "zustand": "^4.3.8"
@@ -81,6 +80,7 @@
         "@ant-design/pro-layout": "^7.13.5",
         "@hot-loader/react-dom": "^17.0.2",
         "@originjs/vite-plugin-commonjs": "^1.0.3",
+        "@rollup/plugin-alias": "^5.0.0",
         "@rollup/plugin-typescript": "^8.5.0",
         "@testing-library/react": "13.4.0",
         "@types/chrome": "0.0.197",
@@ -109,7 +109,7 @@
         "sass": "1.55.0",
         "terser": "^5.17.4",
         "ts-jest": "29.0.2",
-        "ts-loader": "9.4.1",
+        "ts-loader": "9.4.2",
         "typescript": "4.8.3",
         "vite": "3.1.3",
         "vite-plugin-static-copy": "^0.13.1",
