--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "react-pdf": "^6.2.2",
         "react-refresh-typescript": "^2.0.9",
         "react-syntax-highlighter": "^15.5.0",
+        "runtypes": "^6.7.0",
         "sm3": "^1.0.3",
         "use-persisted-state": "^0.3.3",
         "yaml": "^2.3.1",
