--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "hack-tools",
     "version": "0.5.0",
-    "description": "The all in one Red team browser extension for web pentesters",
+    "description": "The all in one  browser extension for offensive security professionals",
     "main": "index.js",
     "scripts": {
         "zip_chrome": "rm -f './dist/*{.map,.txt}' && zip -r bundle_chrome.zip dist/",
