update utils ts files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,21 +10,48 @@
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "moduleResolution": "node",
-        "types": ["vite/client", "node"],
+        "types": [
+            "vite/client",
+            "node"
+        ],
         "noFallthroughCasesInSwitch": true,
         "allowSyntheticDefaultImports": true,
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "forceConsistentCasingInFileNames": true,
-        "typeRoots": ["./src/global.d.ts"],
+        "typeRoots": [
+            "./src/global.d.ts"
+        ],
         "paths": {
-            "@src/*": ["src/*"],
-            "@assets/*": ["src/assets/*"],
-            "@pages/*": ["src/pages/*"],
-            "@data/*": ["src/pages/popup/assets/data/*"],
-            "@types/*": ["src/pages/popup/components/types/*"],
-            "virtual:reload-on-update-in-background-script": ["./src/global.d.ts"],
-            "virtual:reload-on-update-in-view": ["./src/global.d.ts"]
+            "@src/*": [
+                "src/*"
+            ],
+            "@assets/*": [
+                "src/assets/*"
+            ],
+            "@pages/*": [
+                "src/pages/*"
+            ],
+            "@data/*": [
+                "src/pages/popup/assets/data/*"
+            ],
+            "@types/*": [
+                "src/pages/popup/components/types/*"
+            ],
+            "virtual:reload-on-update-in-background-script": [
+                "./src/global.d.ts"
+            ],
+            "virtual:reload-on-update-in-view": [
+                "./src/global.d.ts"
+            ]
         }
     },
-    "include": ["src", "../../../tmp/chrome-extension-boilerplate-react-vite/utils", "vite.config.ts", "node_modules/@types"]
+    "include": [
+        "src",
+        "vite.config.ts",
+        "node_modules/@types"
+    ]
 }
