--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "react": "18.2.0",
         "react-chrome-extension-router": "^1.4.0",
         "react-clipboard.js": "2.0.16",
+        "react-cmdk": "^1.3.9",
         "react-color": "^2.19.3",
         "react-dom": "18.2.0",
         "react-highlight-words": "^0.18.0",
