--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@tanstack/query-sync-storage-persister": "^4.29.7",
         "@tanstack/react-query": "^4.29.7",
         "@tanstack/react-query-persist-client": "^4.29.7",
+        "@tmikeladze/react-cmdk": "^1.3.15-beta.0",
         "@uiw/codemirror-theme-dracula": "^4.21.7",
         "@uiw/react-codemirror": "^4.21.7",
         "antd": "5.8.6",
@@ -60,7 +61,6 @@
         "react": "18.2.0",
         "react-chrome-extension-router": "^1.4.0",
         "react-clipboard.js": "2.0.16",
-        "react-cmdk": "^1.3.9",
         "react-color": "^2.19.3",
         "react-dom": "18.2.0",
         "react-highlight-words": "^0.18.0",
