--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "escape-quotes": "^1.0.2",
         "file-saver": "^2.0.5",
         "fuse.js": "^6.6.2",
+        "idb-keyval": "^6.2.1",
         "jose": "^4.14.4",
         "js-yaml": "^4.1.0",
         "json2csv": "6.0.0-alpha.2",
