--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "crypto-browserify": "^3.12.0",
         "crypto-js": "^4.1.1",
         "darkreader": "^4.9.58",
+        "dayjs": "^1.11.10",
         "dracula.css": "link:codemirror/theme/dracula.css",
         "escape-quotes": "^1.0.2",
         "file-saver": "^2.0.5",
@@ -58,6 +59,7 @@
         "papaparse": "^5.4.1",
         "phpunserialize": "^1.3.0",
         "pretty": "^2.0.0",
+        "qrcode.react": "^3.1.0",
         "rc-queue-anim": "^2.0.0",
         "react": "18.2.0",
         "react-chrome-extension-router": "^1.4.0",
