--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "react-pdf": "^6.2.2",
         "react-refresh-typescript": "^2.0.9",
         "react-syntax-highlighter": "^15.5.0",
+        "reagraph": "^4.14.1",
         "runtypes": "^6.7.0",
         "sm3": "^1.0.3",
         "use-persisted-state": "^0.3.3",
