--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@tmikeladze/react-cmdk": "^1.3.15-beta.0",
         "@uiw/codemirror-theme-dracula": "^4.21.7",
         "@uiw/react-codemirror": "^4.21.7",
+        "alasql": "^4.1.10",
         "antd": "5.9.2",
         "antd-mask-input": "2.0.7",
         "axios": "^1.4.0",
