--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "wxt && npm run prettuer",
+    "dev": "wxt && npm run prettier",
     "dev:firefox": "wxt -b firefox && npm run prettier",
     "build": "wxt build",
     "build:firefox": "wxt build -b firefox",
