Ditching pre for a JSON preview on tabler

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-highlight-words": "^0.18.0",
     "react-hotkeys-hook": "^4.4.0",
     "react-icons": "^4.8.0",
+    "react-json-view": "^1.21.3",
     "react-refresh-typescript": "^2.0.9",
     "react-syntax-highlighter": "^15.5.0",
     "reagraph": "^4.14.1",
