--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.3",
+    "husky": "^8.0.3",
+    "prettier": "^3.1.0",
     "typescript": "^5.1.6",
     "wxt": "^0.9.0"
   }
